--- a/src/Lorry/LorryBundle/Resources/config/routing.yml
+++ b/src/Lorry/LorryBundle/Resources/config/routing.yml
@@ -1,6 +1,6 @@
 front:
     pattern:  /
-    defaults: { _controller: LorryBundle:Site:index }
+    defaults: { _controller: LorryBundle:Site:front }
     
 login:
     pattern: /login
